# unsafe

./: .gitignore  CITATION.cff  CONTRIBUTING.MD  LICENSE  README.md  pyproject.toml
.github/workflows/: draft-joss-pdf.yml
config/: config.yaml
ddfs/raw/: haz_fl_dept.csv  haz_fl_occ.csv  naccs_ddfs.csv  riverine_ids.csv
docs/: README.md  v01.bib  v01.md
examples/: README.md
examples/all_data/config/: config.yaml
examples/env/: environment.yml
examples/phil_frd_partial/: README.md
examples/phil_frd_partial/config/: config_partial.yaml
examples/philadelphia_frd/: README.md
joss-submission/: paper.md
joss_submission/: paper.bib  paper.md
notebooks/: download_data.ipynb  loss_ensemble.ipynb  process_data.ipynb
src/notebooks/: assess_ensemble.ipynb  benchmark_ensemble.ipynb  download_data.ipynb  get_risk.ipynb  loss_ensemble.ipynb  process_data.ipynb  process_ev.ipynb  process_haz.ipynb  unzip_data.ipynb  util_download.ipynb
src/scripts/: download_data.py
src/unsafe/: ddfs.py  download.py  ensemble.py  exp.py  files.py  unzip.py
src/unsafe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/unsafe/util/: download.py  (+1 more)
src/util/: const.py  ddfs.py  ensemble.py  exp.py  files.py  unzip.py
unsafe/: const.py  ddfs.py  download.py  exp.py  files.py  unzip.py
unsafe.egg-info/: top_level.txt
workflow/: Snakefile
workflow/notebooks/: assess_ensemble.ipynb  download_data.ipynb  process_data.ipynb  util_download.ipynb
workflow/rules/: Snakefile
workflow/scripts/: download_data.py  unzip_data.py
workflow/util/: const.py  download.py  files.py
(+9 files in other folders)
